feat: Add generic OTel collector binding and improve CaaS binding
- Introduce BindingPropertiesSupplier builder with urlTransform,
  serverCaCertRequiresMtls, scheme, protocol, compression options
- Introduce BindingCredentialKeys with configurable field and file-prefix names
- Add ConfigurableOtelBindingPropertiesSupplier: selects a CF service binding
  by name, label, or tag (sap.otel.generic.cf.binding.*) and maps its
  credentials to OTLP exporter properties
- Add GenericBindingServiceProvider: finds a CF service instance by name,
  label, or tag selector
- CaasBindingPropertiesSupplier: replace broken port-append with urlTransform
  (<http-receiver-port> placeholder replacement); invoke server CA download
  only when mTLS client credentials are present (serverCaCertRequiresMtls)
- Add Javadoc to CloudLoggingBindingPropertiesSupplier, CaasBindingPropertiesSupplier,
  GenericBindingServiceProvider, ConfigurableOtelBindingPropertiesSupplier
- Fix README: correct property names (sap.otel.generic.*), document label/tag
  selectors, fix CA-required description
- Add tests: BindingPropertiesSupplierTest (urlTransform, serverCaCertRequiresMtls,
  mTLS+token), CaasBindingPropertiesSupplierTest (placeholder URL, no-CA-without-mTLS),
  GenericBindingServiceProviderTest (multi-instance, null-tags),
  ConfigurableOtelBindingPropertiesSupplierTest (label/tag selectors),
  BindingCredentialKeysTest (default file prefixes)